fix footer on mobile.

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -233,7 +233,7 @@ textarea {
 	nav {
 		float: right;
 		padding: 62px 0 0 24px;
-		width: 450px;
+		//width: 450px;
 		text-align: right;
 		ul {
 
@@ -332,10 +332,10 @@ body {
 						> li {
 							padding: 0;
 							&.menu-item-1716 {
-								margin-right: 30px;
+								margin-right: 28px;
 							}
 							&.menu-item-1714 {
-								margin-right: 32px;
+								margin-right: 27px;
 							}
 							.sub-menu {
 								display: none;
